<resources>
    <string name="app_name">MyApp</string>
    <string name="verify_number">Verify Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="otp_will_be_resent_in_90_secs">OTP will be resent in 90 secs</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_name">Enter name</string>
    <string name="next">NEXT</string>
    <string name="myapp">myAPP</string>
    <string name="home">Home</string>
    <string name="qr_scan">QR Scan</string>
    <string name="profile">Profile</string>
    <string name="hi">Hello !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_news_and_weather">Latest News and Weather</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="scanner">Scanner</string>
    <string name="maker">Maker</string>
    <string name="scan_qr_and_make_qr">Scan Qr and Make Qr</string>
    <string name="write_something">Write Something...</string>
    <string name="make_qr">MAKE QR</string>
    <string name="qr_based_on_your_text">QR based on your text:</string>
    <string name="dots">.........</string>
    <string name="x">X</string>
    <string name="open_camera">Open Camera</string>
    <string name="scan_qr_code_to_view_the_text">Scan QR Code to view the text</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="or">OR</string>
</resources>