<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OtpActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/verify_otp"
        android:textStyle="bold"
        android:textColor="@color/text_grey"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="36sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/number_text_box"
        app:layout_constraintTop_toBottomOf="@id/verify_otp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:textSize="18sp"
        android:inputType="number"
        android:phoneNumber="true"
        android:textColor="@color/black"
        android:hint="@string/enter_otp"
        android:textColorHint="@color/otp_txt_color"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/otp_text"
        app:layout_constraintTop_toBottomOf="@id/otp_text"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="14sp"
        android:textColor="#898F9C"
        android:text="@string/otp_will_be_resent_in_90_secs"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_otpTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/otp_text"
        app:layout_constraintEnd_toEndOf="@id/otp_text"
        app:layout_constraintTop_toBottomOf="@id/resend"
        android:layout_marginTop="@dimen/_13sdp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/otp_bg"
        android:text="@string/verify"/>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/loading_bg"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
