<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.QRImageActivity">

    <TextView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/text_grey"
        android:text="@string/x"/>

    <TextView
        android:id="@+id/qr_based"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto"
        android:textSize="22sp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/cross"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/qr_based_on_your_text"/>

    <TextView
        android:id="@+id/text_to_convert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/qr_based"
        app:layout_constraintTop_toBottomOf="@id/qr_based"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:textSize="22sp"
        android:maxLines="1"
        android:fontFamily="@font/roboto"
        android:textColor="@color/text_grey"
        android:text="@string/dots"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/qrCodeImage"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_to_convert"
        android:layout_marginTop="@dimen/_98sdp"
        android:src="@mipmap/ic_launcher"/>

</androidx.constraintlayout.widget.ConstraintLayout>