<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verify_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/verify_number"
        android:textStyle="bold"
        android:textColor="@color/text_grey"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="36sp"/>

    <View
        android:id="@+id/numbox_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/number_text_box"
        app:layout_constraintTop_toTopOf="@id/code_picker"
        app:layout_constraintBottom_toBottomOf="@id/code_picker"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="-6dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/code_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_num"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_25sdp"/>

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/code_picker"
        app:layout_constraintBottom_toBottomOf="@id/code_picker"
        app:layout_constraintStart_toEndOf="@id/code_picker"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@null"
        android:textSize="19sp"
        android:inputType="number"
        android:phoneNumber="true"
        android:hint="@string/mobile_number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/numbox_view"
        app:layout_constraintEnd_toEndOf="@id/numbox_view"
        app:layout_constraintTop_toBottomOf="@id/numbox_view"
        android:layout_marginTop="26dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/otp_bg"
        android:text="@string/send_otp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/google_login"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:textColor="@color/text_grey"
        android:text="@string/or"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/or"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        android:background="@color/text_grey"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        android:background="@color/text_grey"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"/>

    <TextView
        android:id="@+id/google_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/numbox_view"
        app:layout_constraintEnd_toEndOf="@id/numbox_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/google_textbox"
        android:layout_marginBottom="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/continue_with_google"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="14dp"
        app:drawableStartCompat="@drawable/ic_google_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>