<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.home.HomeFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topic_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#AAB8C2"
        android:textSize="18sp"
        app:fontFamily="@font/roboto"
        android:text="@string/latest_news_and_weather"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_txt"
        app:layout_constraintEnd_toStartOf="@id/weather"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_7sdp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/news"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/bg_blue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_txt"
        app:layout_constraintStart_toEndOf="@id/news"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/_7sdp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:text="@string/weather"
        android:gravity="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/news"
        app:layout_constraintEnd_toEndOf="@id/weather"
        app:layout_constraintTop_toTopOf="@id/news"
        android:background="@drawable/news_weather_bg"
        app:layout_constraintBottom_toBottomOf="@id/news"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        android:id="@+id/nw_fragContainer"/>


</androidx.constraintlayout.widget.ConstraintLayout>